--- a/src/pages/user/index.scss
+++ b/src/pages/user/index.scss
@@ -33,7 +33,8 @@
           height: 40px;
           margin-top: 50px;
           margin-left: 25px;
-          object-fit: contain;
+          float: left;
+          overflow: hidden;
         }
       }
       .avatar-container {
@@ -127,7 +128,7 @@
           .txt {
             color: #ffffff;
             text-align: center;
-            font-size: 24px;
+            font-size: 28px;
             span,text {
               font-size: 28px;
               margin-right: 10px;
@@ -145,15 +146,9 @@
             padding-left: 36px;
             margin-top: 10px;
             box-sizing: border-box;
-            i,icon {
-              line-height: 66px;
-              font-size: 22px;
-              &:first-child {
-                margin-left: 10px;
-              }
-              &:last-child {
-                margin-left:-10px;
-              }
+            .iconfont {
+              font-size: 26px;
+              margin-left: 4px;
             }
           }
         }
